--- a/en/html/guide/gui/gui-toolsbar.html
+++ b/en/html/guide/gui/gui-toolsbar.html
@@ -52,7 +52,7 @@
               <a href="../../libs/base/poke.html"><img class=inbullet src="../../../../img-guide/toolpoke.png" alt="poke" border="1"></a>
             </td>
             <td>
-              <strong>Poke tool: </strong> <b class="tkeybd">Ctrl-1</b> This tool allows you to interact with the simulation components. For example if you <q>push</q> on a circuit connection it will switch from one state to another or if <q>push</q> on a cable you can know the value of the signals transported. More information on the link <a href="../../libs/base/poke.html">poke</a> from the library <b class="property">base</b>
+              <strong>Poke tool: </strong> <b class="tkeybd">Ctrl-1</b> This tool allows you to interact with the simulation components. For example if you <q>push</q> on a circuit connection it will switch from one state to another or if <q>push</q> on a cable you can know the value of the signals transported. More information on the link <a href="../../libs/base/poke.html">poke</a> from the library <b class="property">base</b>.
             </td>
           </tr>
           <tr>
@@ -60,7 +60,7 @@
               <a href="../../libs/base/select.html"><img class=inbullet src="../../../../img-guide/toolselect.png" alt="#########" border="1"></a>
             </td>
             <td>
-              <strong>Selection tool: </strong> <b class="tkeybd">Ctrl-2</b> This tool is particularly useful when designing circuits, it allows to ask, move or select the elements. It is also used to wire the circuit. More information on the link <a href="../../libs/base/select.html">select</a> from the library <b class="property">base</b>
+              <strong>Selection tool: </strong> <b class="tkeybd">Ctrl-2</b> This tool is particularly useful when designing circuits, it allows to ask, move or select the elements. It is also used to wire the circuit. More information on the link <a href="../../libs/base/select.html">select</a> from the library <b class="property">base</b>.
             </td>
           </tr>
           <tr>
@@ -68,7 +68,7 @@
               <a href="../../libs/base/text.html"><img class=inbullet src="../../../../img-guide/toolcabel.png" alt="#########" border="1"></a>
             </td>
             <td>
-              <strong>Wiring tool: </strong> <b class="tkeybd">Ctrl-3</b> This tool allows you to place cables on the diagram.
+              <strong>Wiring tool: </strong> <b class="tkeybd">Ctrl-3</b> This tool allows you to place cables on the diagram. More information on the link <a href="../../libs/base/wiring.html">wiring</a> from the library <b class="property">base</b>.
             </td>
           </tr>
           <tr>
@@ -76,7 +76,7 @@
               <a href="../../libs/base/text.html"><img class=inbullet src="../../../../img-guide/tooltext.png" alt="#########" border="1"></a>
             </td>
             <td>
-              <strong>Text Tool: </strong> <b class="tkeybd">Ctrl-4</b> This tool makes it possible to place text on the drawings and to modify the labels of the components. More information on the link <a href="../../libs/base/text.html">Text</a> from the library <b class="property">base</b>
+              <strong>Text Tool: </strong> <b class="tkeybd">Ctrl-4</b> This tool makes it possible to place text on the drawings and to modify the labels of the components. More information on the link <a href="../../libs/base/text.html">Text</a> from the library <b class="property">base</b>.
             </td>
           </tr>
           <tr>
