--- a/fr/html/guide/gui/gui-toolsbar.html
+++ b/fr/html/guide/gui/gui-toolsbar.html
@@ -66,7 +66,7 @@
               <a href="../../libs/base/text.html"><img class=inbullet src="../../../../img-guide/toolcabel.png" alt="#########" border="1"></a>
             </td>
             <td>
-              <strong>Outil câblage:</strong> <b class="tkeybd">Ctrl-3</b> Cet outil permet de placer des câbles sur le schéma .Plus d'information sur le lien <a href="../../libs/base/text.html">text</a> de la librairie <b class="property">base</b>
+              <strong>Outil câblage:</strong> <b class="tkeybd">Ctrl-3</b> Cet outil permet de placer des câbles sur le schéma .Plus d'information sur le lien <a href="../../libs/base/wiring.html">text</a> de la librairie <b class="property">base</b>
             </td>
           </tr>
           <tr>
