--- a/fr/html/libs/io/portio.html
+++ b/fr/html/libs/io/portio.html
@@ -7,14 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <title>
-      Port I/O
+      Port E/S
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        <img class="iconlibs" src="../../../../icons/6464/portio.png" alt="#########" width="32" height="32" align="middle"> <em>Port I/O</em>
+        <img class="iconlibs" src="../../../../icons/6464/portio.png" alt="#########" width="32" height="32" align="middle"> <em>Port E/S</em>
       </h1>
       <table>
         <tbody>
