--- a/he/html/libs/base/index.html
+++ b/he/html/libs/base/index.html
@@ -31,14 +31,6 @@
           </tr>
           <tr>
             <td>
-              <a href="edit.html"><img class="iconlibs" src="../../../../icons/6464/toolselect.png" width="32" height="32" border="0" alt="#########"></a>
-            </td>
-            <td>
-              <a href="edit.html">כלי העריכה</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
               <a href="select.html"><img class="iconlibs" src="../../../../icons/6464/toolselect.png" width="32" height="32" border="0" alt="#########"></a>
             </td>
             <td>
@@ -47,7 +39,7 @@
           </tr>
           <tr>
             <td>
-              <a href="wiring.html"><img class="iconlibs" src="../../../../icons/6464/toolmenu.png" width="32" height="32" border="0" alt="#########"></a>
+              <a href="wiring.html"><img class="iconlibs" src="../../../../icons/6464/toolwiring.png" width="32" height="32" border="0" alt="#########"></a>
             </td>
             <td>
               <a href="wiring.html">כלי החיווט</a>
@@ -61,26 +53,10 @@
               <a href="text.html">כלי טקסט</a>
             </td>
           </tr>
-          <tr>
-            <td>
-              <a href="menu.html"><img class="iconlibs" src="../../../../icons/6464/toolmenu.png" width="32" height="32" border="0" alt="#########"></a>
-            </td>
-            <td>
-              <a href="menu.html">כלי התפריט</a>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <a href="label.html"><img class="iconlibs" src="../../../../icons/6464/tooltext.png" width="32" height="32" border="0" alt="#########"></a>
-            </td>
-            <td>
-              <a href="label.html">תווית</a>
-            </td>
-          </tr>
         </tbody>
       </table>
       <p>
-        <a href="../index.html">חזרה אל <em>הפניה לספרייה</em></a>
+        <b>חזרה אל</b> <a href="../index.html">הפניה לספרייה</a>
       </p>
     </div>
   </body>
