--- a/pt/html/libs/index.html
+++ b/pt/html/libs/index.html
@@ -23,7 +23,7 @@
         Todas as ferramentas incluídas nas bibliotecas predefinidas do Logisim's serão documentadas nessas referências.
       </p>
       <h2>
-        <b><a href="wiring/index.html">Biblioteca de cablagem</a></b>
+        <b><a href="wiring/index.html">Biblioteca Conexão</a></b>
       </h2>
       <table>
         <tbody>
