--- a/pt/html/libs/wiring/index.html
+++ b/pt/html/libs/wiring/index.html
@@ -7,14 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="pt">
     <title>
-      Biblioteca de cablagem
+      Biblioteca de Conexão
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        Biblioteca de cablagem
+        Biblioteca de Conexão
       </h1>
       <p>
         A biblioteca de Fiação inclui componentes que se relacionam principalmente com fios e com conceitos eléctricos básicos.
