--- a/de/html/libs/base/index.html
+++ b/de/html/libs/base/index.html
@@ -31,14 +31,6 @@
         </tr>
         <tr>
           <td align="right">
-            <a href="edit.html"><img class="iconlibs" src="../../../../icons/6464/toolselect.png" width="32" height="32" border="0" alt="#########"></a>
-          </td>
-          <td>
-            <a href="edit.html">Bearbeitungswerkzeug</a>
-          </td>
-        </tr>
-        <tr>
-          <td align="right">
              <a href="select.html"><img class="iconlibs" src="../../../../icons/6464/toolselect.png" width="32" height="32" border="0" alt="#########"></a>
           </td>
           <td>
@@ -47,7 +39,7 @@
         </tr>
         <tr>
           <td align="right">
-            <a href="wiring.html"><img class="iconlibs" src="../../../../icons/6464/toolmenu.png" width="32" height="32" border="0" alt="#########"></a>
+            <a href="wiring.html"><img class="iconlibs" src="../../../../icons/6464/toolwiring.png" width="32" height="32" border="0" alt="#########"></a>
           </td>
           <td>
             <a href="wiring.html">Verbindungswerkzeug</a>
@@ -59,22 +51,6 @@
           </td>
           <td>
             <a href="text.html">Textwerkzeug</a>
-          </td>
-        </tr>
-        <tr>
-          <td align="right">
-            <a href="menu.html"><img class="iconlibs" src="../../../../icons/6464/toolmenu.png" width="32" height="32" border="0" alt="#########"></a>
-          </td>
-          <td>
-            <a href="menu.html">Menüwerkzeug</a>
-          </td>
-        </tr>
-        <tr>
-          <td align="right">
-           <a href="label.html"><img class="iconlibs" src="../../../../icons/6464/tooltext.png" width="32" height="32" border="0" alt="#########"></a>
-          </td>
-          <td>
-            <a href="label.html">Label</a>
           </td>
         </tr>
       </tbody>
