--- a/fr/html/libs/io/button.html
+++ b/fr/html/libs/io/button.html
@@ -14,7 +14,7 @@
   <body>
     <div class="maindiv">
       <h1>
-        <img class="iconlibs" src="../../../../icons/6464/button.png" alt="#########" width="32" height="32" align="middle"> <em>Bouton</em>
+        <img class="iconlibs" src="../../../../icons/6464/button.png" alt="#########" width="32" height="32"> <em>Bouton</em>
       </h1>
       <table>
         <tbody>
