--- a/fr/html/libs/io/ledbar.html
+++ b/fr/html/libs/io/ledbar.html
@@ -7,14 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <title>
-      LED Bar
+      LED Barre
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        <img class="iconlibs" src="../../../../icons/6464/ledbar.png" alt="#########" width="32" height="32" align="middle"> <em>LED Bar</em>
+        <img class="iconlibs" src="../../../../icons/6464/ledbar.png" alt="#########" width="32" height="32" align="middle"> <em>LED Barre</em>
       </h1>
       <table>
         <tbody>
