--- a/fr/html/libs/ioextra/explarom.html
+++ b/fr/html/libs/ioextra/explarom.html
@@ -15,7 +15,7 @@
     <div class="maindiv">
       <h1>
         <img class="iconlibs" src="../../../../icons/6464/pla0.png" alt="#########" width="32" height="32"> 
-		<em>PLA</em>
+		<em>Réseau logique programmable PLA</em>
       </h1>
       <table>
         <tbody>
