--- a/en/html/libs/index.html
+++ b/en/html/libs/index.html
@@ -678,7 +678,7 @@
             &nbsp;
           </td>
           <td>
-            <a href="io/ledbar.html">LED Bar</a>
+            <a href="io/ledbar.html">Bar graph array LED</a>
           </td>
         </tr>
           <tr>
