--- a/en/html/libs/io/index.html
+++ b/en/html/libs/io/index.html
@@ -87,7 +87,7 @@
               &nbsp;
             </td>
             <td>
-              <a href="./ledbar.html">LED Bar</a>
+              <a href="./ledbar.html">Bar graph array LED</a>
             </td>
           </tr>
           <tr>
