--- a/fr/html/libs/base/text.html
+++ b/fr/html/libs/base/text.html
@@ -80,7 +80,7 @@
                 <a href="../io/button.html">Button</a><br>
                 <a href="../io/dipswitch.html">Interrupteur Dip</a><br>
                 <a href="../io/led.html">LED</a><br>
-                <a href="../io/ledbar.html">Barre LED</a><br>
+                <a href="../io/ledbar.html">Bargraphe LED</a><br>
                 <a href="../io/rgbled.html">RGB LED</a><br>
                 <a href="../io/7seg.html">Afficheur 7-Segments</a><br>
                 <a href="../io/dotmat.html">Matrice de LED</a><br>
@@ -120,7 +120,7 @@
       <p>
         Les attributs de l'outil ne seront valides que pour les étiquettes que l'on dépose n'importe où sur le circuit. Quand c'est une étiquette d'un composant, ce sont les attributs définis par le composant qui s'imposent.
       </p>
-      <div class="attliste">
+	   <div class="attliste">
         <dl>
           <dt class="lib">
             Text
