--- a/fr/html/libs/index.html
+++ b/fr/html/libs/index.html
@@ -675,7 +675,7 @@
             &nbsp;
           </td>
           <td>
-            <a href="io/ledbar.html">Barre LED</a>
+            <a href="io/ledbar.html">Bargraphe LED</a>
           </td>
         </tr>
           <tr>
