--- a/fr/html/libs/io/index.html
+++ b/fr/html/libs/io/index.html
@@ -87,7 +87,7 @@
             &nbsp;
           </td>
           <td>
-            <a href="./ledbar.html">Barre LED</a>
+            <a href="./ledbar.html">Bargraphe LED</a>
           </td>
         </tr>
 		<tr>
