--- a/libstatus.html
+++ b/libstatus.html
@@ -128,17 +128,17 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" >3.9</td>
+		<td height="17" class="good">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
-		<td align="left">Edit tool</td>
+		<td align="left">Select tool</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/libs/base/edit.html">__</a></td>
-		<td align="center" class="needtask"><a href="./fr/html/libs/base/edit.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/base/edit.html">__</a></td>
-		<td align="center" class="needtask"><a href="./pt/html/libs/base/edit.html">__</a></td>
-		<td align="center" class="needtask"><a href="./ru/html/libs/base/edit.html">__</a></td>
-		<td align="center" class="needtask"><a href="./he/html/libs/base/edit.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/base/select.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/base/select.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/base/select.html">__</a></td>
+		<td align="center" class="needtask"><a href="./pt/html/libs/base/select.html">__</a></td>
+		<td align="center" class="needtask"><a href="./ru/html/libs/base/select.html">__</a></td>
+		<td align="center" class="needtask"><a href="./he/html/libs/base/select.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -153,9 +153,9 @@
 		<td align="center" class="good"><a href="./en/html/libs/base/wiring.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/base/wiring.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/base/wiring.html">__</a></td>
-		<td align="center" class="good"><a href="./pt/html/libs/base/wiring.html">__</a></td>
-		<td align="center" class="good"><a href="./ru/html/libs/base/wiring.html">__</a></td>
-		<td align="center" class="good"><a href="./he/html/libs/base/wiring.html">__</a></td>
+		<td align="center" class="good"><a href="./pt/html/libs/base/wiring.html">_V</a></td>
+		<td align="center" class="good"><a href="./ru/html/libs/base/wiring.html">_V</a></td>
+		<td align="center" class="good"><a href="./he/html/libs/base/wiring.html">_V</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -170,9 +170,9 @@
 		<td align="center" class="good"><a href="./en/html/libs/base/text.html">_V</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/base/text.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/base/text.html">__</a></td>
-		<td align="center" class="good"><a href="./pt/html/libs/base/text.html">__</a></td>
-		<td align="center" class="needtask"><a href="./ru/html/libs/base/text.html">__</a></td>
-		<td align="center" class="needtask"><a href="./he/html/libs/base/text.html">__</a></td>
+		<td align="center" class="good"><a href="./pt/html/libs/base/text.html">_V</a></td>
+		<td align="center" class="good"><a href="./ru/html/libs/base/text.html">_V</a></td>
+		<td align="center" class="good"><a href="./he/html/libs/base/text.html">_V</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
