--- a/pt/html/libs/base/text.html
+++ b/pt/html/libs/base/text.html
@@ -80,7 +80,7 @@
                 <a href="../io/button.html">Botão</a><br>
                 <a href="../io/dipswitch.html">Dip Switch</a><br>
                 <a href="../io/led.html">LED</a><br>
-                <a href="../io/ledbar.html">Bar LED</a><br>
+                <a href="../io/ledbar.html">Gráfico de barras LED</a><br>
                 <a href="../io/rgbled.html">RGB LED</a><br>
                 <a href="../io/7seg.html">Display de 7-segmentos</a><br>
                 <a href="../io/dotmat.html">Matriz de LEDs</a><br>
@@ -118,7 +118,7 @@
         Atributos
       </h2>
       <p>
-        Os atributos dessa ferramenta são os mesmos do <a href="label.html">componente Rótulo</a>. Esses atributos não terão efeito algum quando se editar o rótulo de um componente que já exista, mas eles serão transmitidos para quaisquer rótulos criados usando essa ferramenta.
+        Os atributos da ferramenta só serão válidos para etiquetas que sejam colocadas em qualquer parte do circuito. Quando se trata de uma etiqueta de componente, aplicar-se-ão os atributos definidos pelo componente.
       </p>
       <div class="attliste">
         <dl>
