--- a/pt/html/libs/io/index.html
+++ b/pt/html/libs/io/index.html
@@ -101,7 +101,7 @@
             &nbsp;
           </td>
           <td>
-            <a href="./ledbar.html">LED Bar</a>
+            <a href="./ledbar.html">Gráficos de barras LED</a>
           </td>
         </tr>
 		<tr>
