--- a/ru/html/libs/base/text.html
+++ b/ru/html/libs/base/text.html
@@ -7,47 +7,158 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="ru">
     <link rel="stylesheet" type="text/css" href="../../style.css">
-    <title>Инструмент Текст    </title>
+    <title>
+      Инструмент Текст
+    </title>
   </head>
   <body>
     <div class="maindiv">
-
-<h1><img align="center" src="../../../../img-guide/text.png" width="32" height="32">
-<em>Инструмент Текст</em></h1>
-
-<p><table>
-<tr><td><strong>Библиотека:</strong></td>
-	<td><a href="index.html">Базовые</a></td></tr>
-<tr><td><strong>Введён в:</strong></td>
-	<td>2.0 Beta 1</td></tr>
-</table></p>
-
-<h2>Поведение</h2>
-
-<p>Инструмент Текст позволяет создавать и редактировать метки, привязанные к компонентам. Какие компоненты поддерживают метки, указано в разделе "Поведение Инструмента Текст" их документации. По состоянию на текущий релиз, следующие компоненты во встроенных библиотеках поддерживают метки.</p>
-<center><table>
-<tr><td valign="top"><strong>Библиотека Базовые</strong></td>
-     <td><a href="../wiring/pin.html">Контакт</a> <br><a href="../wiring/clock.html">Тактовый генератор</a> <br><a href="label.html">Метка</a> <br><a href="probe.html">Датчик</a>
-	 </td></tr>
-<tr><td valign="top"><strong>Библиотека Память</strong></td>
-     <td><a href="../mem/flipflops.html">D/T/JK/SR триггер</a> <br><a href="../mem/register.html">Регистр</a> <br><a href="../mem/counter.html">Счётчик</a> <br><a href="../mem/shiftreg.html">Сдвиговый регистр</a> <br><a href="../mem/random.html">Генератор случайных чисел</a>
-	 </td></tr>
-<tr><td valign="top"><strong>Библиотека Ввод/вывод</strong></td>
-     <td><a href="../io/button.html">Кнопка</a> <br><a href="../io/led.html">Индикатор</a>
-	 </td></tr>
-</table></center>
-<p>Для компонентов, которые могут иметь метку, но не имеют её в данный момент, вы можете щёлкнуть внутри компонента чтобы добавить метку. Если же метка уже есть, то вам нужно щёлкнуть внутри метки. Если вы щёлкните в точке, где в данный момент нет метки для редактирования, то Logisim инициирует добавление нового компонента Метка.</p>
-
-<p>В текущей версии Logisim функции редактирования текста всё ещё довольно примитивны. Выделения области текста внутри метки невозможны. Нет способа вставить знак перехода на следующую строку в метку.</p>
-
-<h2>Атрибуты</h2>
-
-<p>Атрибуты для инструмента такие же, как для <a
-href="label.html">компонента Метка</a>. Эти атрибуты не действуют в режиме редактирования метки существующего компонента, но они действуют для любых меток, созданных с использованием Инструмента Текст.</p>
-
-<p>При нажатии на компонент, поддерживающий Инструмент Текст, будут отображены атрибуты компонента.</p>
-
-<p><a href="../index.html">Назад к <em>Справке по библиотеке</em></a></p>
-</div>
-</body>
+      <h1>
+        <img class="iconlibs" src="../../../../icons/6464/tooltext.png" alt="#########" width="32" height="32"> <em>Инструмент Текст</em>
+      </h1>
+      <table>
+        <tbody>
+          <tr>
+            <td>
+              <strong>Библиотека:</strong>
+            </td>
+            <td>
+              <a href="index.html">Базовые</a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <strong>Введён в:</strong>
+            </td>
+            <td>
+              2.0 Beta 1
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <h2>
+        Поведение
+      </h2>
+      <p>
+        Инструмент Текст позволяет создавать и редактировать метки, привязанные к компонентам. Какие компоненты поддерживают метки, указано в разделе "Поведение Инструмента Текст" их документации. По состоянию на текущий релиз, следующие компоненты во встроенных библиотеках поддерживают метки.
+      </p>
+      <center>
+        <table>
+          <tbody>
+            <tr>
+              <td valign="top">
+                <strong>Библиотека Базовые</strong>
+              </td>
+              <td>
+                <a href="../wiring/pin.html">Контакт</a><br>
+                <a href="../wiring/probe.html">Датчик</a><br>
+                <a href="../wiring/tunnel.html">Tunnel</a><br>
+                <a href="../wiring/clock.html">Тактовый генератор</a>
+              </td>
+            </tr>
+            <tr>
+              <td valign="top">
+                <strong>Библиотека Элементы</strong>
+              </td>
+              <td>
+                <a href="../gates/index.html">Все компоненты</a>
+              </td>
+            </tr>
+            <tr>
+              <td valign="top">
+                <strong>Библиотека Память</strong>
+              </td>
+              <td>
+                <a href="../mem/index.html">Все компоненты</a>
+              </td>
+            </tr>
+            <tr>
+              <td valign="top">
+                <strong>Библиотека Ввод/вывод</strong>
+              </td>
+              <td>
+                <a href="../io/button.html">Кнопка</a><br>
+                <a href="../io/dipswitch.html">Двухпозиционный переключатель</a><br>
+                <a href="../io/led.html">Светодиод</a><br>
+                <a href="../io/ledbar.html">LED bar</a><br>
+                <a href="../io/rgbled.html">Трёхцветный светодиод</a><br>
+                <a href="../io/7seg.html">7-сегментный индикатор</a><br>
+                <a href="../io/dotmat.html">Светодиодная матрица</a><br>
+                <a href="../io/portio.html">Порт ввода/вывода</a>
+              </td>
+            </tr>
+            <tr>
+              <td valign="top">
+                <strong>Библиотека Ввод/вывод Extra</strong>
+              </td>
+              <td>
+                <a href="../ioextra/exswitch.html">Переключатель</a><br>
+                <a href="../ioextra/exslider.html">Ползунок</a><br>
+                <a href="../ioextra/explarom.html">Программируемый логический массив ПЛМ</a>
+              </td>
+            </tr>
+            <tr>
+              <td valign="top">
+                <strong>Библиотека System On a Chip</strong>
+              </td>
+              <td>
+                <a href="../soc/index.html">Все компоненты</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </center>
+      <p>
+        Для компонентов, которые могут иметь метку, но не имеют её в данный момент, вы можете щёлкнуть внутри компонента чтобы добавить метку. Если же метка уже есть, то вам нужно щёлкнуть внутри метки. Если вы щёлкните в точке, где в данный момент нет метки для редактирования, то Logisim инициирует добавление нового компонента Метка.
+      </p>
+      <p>
+        В текущей версии Logisim функции редактирования текста всё ещё довольно примитивны. Выделения области текста внутри метки невозможны. Нет способа вставить знак перехода на следующую строку в метку.
+      </p>
+      <h2>
+        Атрибуты
+      </h2>
+      <p>
+        Атрибуты инструмента будут действительны только для меток, размещенных в любом месте схемы. Если это этикетка компонента, то применяются атрибуты, определенные для компонента.
+      </p>
+      <div class="attliste">
+        <dl>
+          <dt class="lib">
+            Текст
+          </dt>
+          <dd>
+            Текст, размещаемый на метке. Это значение можно изменять в таблице атрибутов, или, используя Инструмент Текст, на холсте.
+          </dd>
+          <dt class="lib">
+            Шрифт
+          </dt>
+          <dd>
+            Шрифт, используемый при отрисовке метки.
+          </dd>
+           <dt class="lib">
+            Горизонтальное выравнивание
+          </dt>
+          <dd>
+            Метод горизонтального выравнивания для текста по отношению к официальному расположению метки (тому месту, где произошло нажатие мыши при создании метки). "Левое" означает, что текст должен быть отрисован так, чтобы его левый край находился в этом месте; "правое" означает, что текст должен быть отрисован так, чтобы его правый край находился в этом месте; и "по центру" означает, что текст должен быть отрисован так, чтобы его центр (горизонтальный) находился в этом месте.
+          </dd>
+          <dt class="lib">
+            Вертикальное выравнивание
+          </dt>
+          <dd>
+            <p>
+              Метод вертикального выравнивания для текста по отношению к официальному расположению метки (тому месту, где произошло нажатие мыши при создании метки). "По базовой" означает, что базовая линия должна пересекать это место; "По верху" означает, что верх текста должен пересекать это место; "По низу" означает, что низ текста должен пересекать это место; "По центру" означает, что текст должен быть центрирован (вертикально) по этому месту.
+            </p>
+            <p>
+              Верх и низ текста вычисляется на основе стандартных значений высоты верхней планки высоких и нижней планки низких букв шрифта, поэтому, даже если сам текст не содержит высоких букв (таких как <em>б</em> ) или низких букв (таких как <em>у</em> ), в целях вертикального позиционирования предполагается, что такие буквы содержатся.
+            </p>
+          </dd>
+        </dl>
+      </div>
+      <p>
+        При нажатии на компонент, поддерживающий Инструмент Текст, будут отображены атрибуты компонента.
+      </p>
+      <p>
+        <a href="../index.html">Назад к <em>Справке по библиотеке</em></a>
+      </p>
+    </div>
+  </body>
 </html>
