--- a/en/html/libs/base/select.html
+++ b/en/html/libs/base/select.html
@@ -43,23 +43,30 @@
         Allows individual components to be placed into the current selection. There are a number of actions possible with this tool.
       </p>
       <ul>
-        <li>Pressing the mouse button while it is within a currently selected component begins a drag moving all components of the selection.
+	    <li>
+		<b class="tkeybd">Left-clicking</b> on a component selects it. Holding down the Shift key adds the component to the current selection, or deletes it if it is already in the selection.
+		</li>
+        <li><b class="tkeybd">Left-clicking</b> while it is within a currently selected component begins a drag moving all components of the selection.
           <p>
-            By default, Logisim will compute a way to add new wires so that no existing connections are lost during the move. (Sometimes it will delete or shorten existing wires.) If you're performing a move where you do not want these changes to be made, you can press the shift key during the move. If you want to disable this behavior entirely, go to Project &gt; Options, select the Canvas tab, and uncheck the <q>Keep Connections When Moving</q> box; in this case, the connections are computed only when the shift key <em>is</em> down.
+            By default, Logisim will compute a way to add new wires so that no existing connections are lost during the move. (Sometimes it will delete or shorten existing wires.) If you're performing a move where you do not want these changes to be made, you can press the  <b class="tkeybd">shift key</b> during the move. If you want to disable this behavior entirely, go to <b class="menu">|&nbsp;File&nbsp;|</b>→<b class="menu">|&nbsp;Preferences&hellip;&nbsp;|</b> select the <b class="menu">|&nbsp;layout&nbsp;|</b> tab, and uncheck the <q>Keep Connections When Moving</q> box; in this case, the connections are computed only when the <b class="tkeybd">shift key</b> is down.
           </p>
           <p>
             Dragging a selection can lead to unexpected behavior from wires: If you drag a selection including some wires on top of some other wires, all wires are merged, and the merged wires are placed into the selection. As a result, if you drag the selection a second time, the wires previously at the location will not be left behind. This behavior is necessary to keep with the expected behavior of wires in Logisim. And it does not normally constitute a major problem: Logisim will draw the full selection in the midst of dropping, and you should not drop it until you are sure it is in the
             correct location.
           </p>
         </li>
-        <li>Otherwise, clicking the mouse within a component drops all components from the current selection and selects instead the component(s) containing the clicked location.
+        <li>Otherwise, <b class="tkeybd">Left-clicking</b> within a component drops all components from the current selection and selects instead the component(s) containing the clicked location.
         </li>
-        <li>Shift-clicking the mouse within a component toggles that component's presence within the selection. If multiple components include the same location, all components' presence will be toggled. None of this will happen, though, if shift-clicking is mapped to another tool instead (via the project options window's <a href="../../guide/opts/opts-mouse.html">Mouse tab</a>).
+        <li>If you <b class="tkeybd">left-click</b> a component while holding down the <b class="tkeybd">shift key</b> within a component toggles that component's presence within the selection. If multiple components include the same location, all components' presence will be toggled. None of this will happen, though, if shift-clicking is mapped to another tool instead (via the project options window's <a href="../../guide/opts/opts-mouse.html">Mouse tab</a>).
         </li>
-        <li>Dragging the mouse starting at a location not contained within any components drops all components from the current selection and initiates a rectangular selection. All component(s) contained by the rectangle will be placed into the selection.
+        <li>Dragging the mouse with  <b class="tkeybd">left-click</b>  starting at a location not contained within any components initiates a rectangular selection. The presence in the selection of all component(s) contained by the rectangle will be toggled. This will not happen, though, if shift-clicking is mapped to another tool instead.
         </li>
-        <li>Shift-dragging the mouse starting at a location not contained within any components initiates a rectangular selection. The presence in the selection of all component(s) contained by the rectangle will be toggled. This will not happen, though, if shift-clicking is mapped to another tool instead.
-        </li>
+		<li>
+		<b class="tkeybd">Right-click</b> on an unselected component to display a context menu: <b class="menu">|&nbsp;Rotate left&nbsp;|</b>, <b class="menu">|&nbsp;Rotate right&nbsp;|</b>, <b class="menu">|&nbsp;Delete&nbsp;|</b>, <b class="menu">|&nbsp;Show attributes&nbsp;|</b>.
+		</li>
+		<li>
+		Right-click on a selected component to display a context menu: <b class="menu">|&nbsp;Delete selection&nbsp;|</b>, <b class="menu">|&nbsp;Cut selection&nbsp;|</b>, <b class="menu">|&nbsp;Copy selection&nbsp;|</b>.
+		</li>
       </ul>
       <p>
         After selecting the desired items in the selection, you can of course cut/copy/paste/delete all the items via the <a href="../../guide/menu/edit.html">Edit menu</a>.
