--- a/en/html/libs/base/poke.html
+++ b/en/html/libs/base/poke.html
@@ -52,7 +52,7 @@
               <td>
                 <a href="../wiring/pin.html">Pin</a><br>
                 <a href="../wiring/clock.html">Clock</a><br>
-				<a href="../wiring/por.html">POR</a>
+				<a href="../wiring/poweronreset.html">POR</a>
               </td>
             </tr>
             <tr>
@@ -60,7 +60,7 @@
                 <strong>Memory library</strong>
               </td>
               <td>
-                 <a href="../memindex.html">All components except the random generator</a><br>
+                 <a href="../mem/index.html">All components except the random generator</a><br>
               </td>
             </tr>
             <tr>
