--- a/fr/html/libs/base/poke.html
+++ b/fr/html/libs/base/poke.html
@@ -52,7 +52,7 @@
               <td>
                 <a href="../wiring/pin.html">Broche</a><br>
                 <a href="../wiring/clock.html">Horloge</a><br>
-				<a href="../wiring/por.html">Reset au démarrage</a>
+				<a href="../wiring/poweronreset.html">Reset au démarrage</a>
               </td>
             </tr>
             <tr>
@@ -60,7 +60,7 @@
                 <strong>Librairies Circuits séquenciels / Mémoires</strong>
               </td>
               <td>
-                <a href="../memindex.html">Tous les composants à l'exception du générateur aléatoire</a>
+                <a href="../mem/index.html">Tous les composants à l'exception du générateur aléatoire</a>
               </td>
             </tr>
             <tr>
