--- a/fr/html/libs/base/select.html
+++ b/fr/html/libs/base/select.html
@@ -59,9 +59,9 @@
         </li>
         <li>Un <b class="tkeybd">clic gauche</b> et déplacement de la souris en commençant par un emplacement non contenu dans un composant déclenche une sélection rectangulaire. La présence dans la sélection de tous les composants contenus dans le rectangle sera modifiée. Cela ne se produira cependant pas si un clic-clic est associé à un autre outil.
         </li>
-		<li> Un <b class="tkeybd">clic-droit</b> sur un composant non sélectioné affiche un menu contextuel :  <b class="menu">|&nbsp;Rotation a gauche&nbsp;|</b>,  <b class="menu">|&nbsp;Rotation a droite&nbsp;|</b>,  <b class="menu">|&nbsp;Effacer&nbsp;|</b>,  <b class="menu">|&nbsp;Afficher les attributs&nbsp;|</b>.
+		<li> Un <b class="tkeybd">clic-droit</b> sur un composant non sélectioné affiche un menu contextuel&nbsp:  <b class="menu">|&nbsp;Rotation a gauche&nbsp;|</b>,  <b class="menu">|&nbsp;Rotation a droite&nbsp;|</b>,  <b class="menu">|&nbsp;Effacer&nbsp;|</b>,  <b class="menu">|&nbsp;Afficher les attributs&nbsp;|</b>.
 		</li>
-		<li> Un <b class="tkeybd">clic-droit</b> sur un composant sélectioné affiche un menu contextuel :  <b class="menu">|&nbsp;Effacer la sélection&nbsp;|</b>,  <b class="menu">|&nbsp;Couper la sélection&nbsp;|</b>,  <b class="menu">|&nbsp;Copier la sélection&nbsp;|</b>.
+		<li> Un <b class="tkeybd">clic-droit</b> sur un composant sélectioné affiche un menu contextuel&nbsp:  <b class="menu">|&nbsp;Effacer la sélection&nbsp;|</b>,  <b class="menu">|&nbsp;Couper la sélection&nbsp;|</b>,  <b class="menu">|&nbsp;Copier la sélection&nbsp;|</b>.
 		</li>
       </ul>
       <p>
