--- a/he/html/libs/base/poke.html
+++ b/he/html/libs/base/poke.html
@@ -52,7 +52,7 @@ $<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
               <td>
                 <a href="../wiring/pin.html">הצמד</a><br>
                 <a href="../wiring/clock.html">שעון</a><br>
-				<a href="../wiring/por.html">הפעלה איפוס</a>
+				<a href="../wiring/poweronreset.html">הפעלה איפוס</a>
               </td>
             </tr>
             <tr>
@@ -60,7 +60,7 @@ $<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
                 <strong>ספריית זיכרון</strong>
               </td>
               <td>
-                  <a href="../memindex.html">כל הרכיבים למעט הגנרטור האקראי</a><br>
+                  <a href="../mem/index.html">כל הרכיבים למעט הגנרטור האקראי</a><br>
               </td>
             </tr>
             <tr>
