--- a/pt/html/libs/base/poke.html
+++ b/pt/html/libs/base/poke.html
@@ -51,7 +51,7 @@
               </td>
               <td>
                 <a href="../wiring/pin.html">Pino</a><br>
-                <a href="../wiring/clock.html">Clock</a> <a href="../wiring/por.html">POR</a>
+                <a href="../wiring/clock.html">Clock</a> <a href="../wiring/poweronreset.html">POR</a>
               </td>
             </tr>
             <tr>
@@ -59,7 +59,7 @@
                 <strong>Biblioteca Memória</strong>
               </td>
               <td>
-                <a href="../memindex.html">Todos os componentes, exceto o gerador aleatório</a>
+                <a href="../mem/index.html">Todos os componentes, exceto o gerador aleatório</a>
               </td>
             </tr>
             <tr>
