--- a/ru/html/libs/base/poke.html
+++ b/ru/html/libs/base/poke.html
@@ -52,7 +52,7 @@
               <td>
                 <a href="../wiring/pin.html">Контакт</a><br>
                 <a href="../wiring/clock.html">Тактовый генератор</a><br>$
-				<a href="../wiring/por.html">Сигнал сброса</a>
+				<a href="../wiring/poweronreset.html">Сигнал сброса</a>
               </td>
             </tr>
             <tr>
@@ -60,7 +60,7 @@
                 <strong>Библиотека Память</strong>
               </td>
               <td>
-                <a href="../memindex.html">Все компоненты, кроме генератора случайных чисел</a><br>
+                <a href="../mem/index.html">Все компоненты, кроме генератора случайных чисел</a><br>
               </td>
             </tr>
             <tr>
