--- a/fr/html/libs/io/index.html
+++ b/fr/html/libs/io/index.html
@@ -153,7 +153,7 @@
             &nbsp;
           </td>
           <td>
-            <a href="./portio.html">Port I/O</a>
+            <a href="./portio.html">Port E/S</a>
           </td>
         </tr>
         <tr>
